test/test_11710503_2.out
Error type 5 at Line 11: unmatching type on both sides of assignment
Error type 10 at Line 12: indexing on non-array variable
